--- a/about.html
+++ b/about.html
@@ -7,14 +7,15 @@
 
 <body>
     <header class="navigation">
-        <h1 style="font: normal normal bold 55px/119px Lulo Clean W01 One;">Amie Moreno
+        <h1 style="font: normal normal bold 55px/119px Lulo Clean W01 One;">
+            <a href="./index.html">Amie Moreno</a>
         </h1>
         <nav class="inline-block" style="display: flex; justify-content: center;">
             <ul class="inline-block">
-                <li>work</li>
-                <li>about me</li>
-                <li>contact</li>
-                <li>resume</li>
+                <li><a href="./work.html">work</a></li>
+                <li><a href="./about.html">about me</a></li>
+                <li><a href="./contact.html">contact</a></li>
+                <li><a href="./resume.html">resume</a></li>
             </ul>
         </nav>
     </header>
