--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="css\style.css">
-    </head>
-<body>
+
+<head>
+    <link rel="stylesheet" href="css\style.css">
+</head>
 <header class="navigation">
-    <h1 style="font: normal normal bold 55px/119px Lulo Clean W01 One;">Amie Moreno 
+    <h1 style="font: normal normal bold 55px/119px Lulo Clean W01 One;">
+        <a href="./index.html">Amie Moreno</a>
     </h1>
     <nav class="inline-block" style="display: flex; justify-content: center;">
         <ul class="inline-block">
-            <li>work</li>
-            <li>about me</li>
-            <li>contact</li>
-            <li>resume</li>
-          </ul>
+            <li><a href="./work.html">work</a></li>
+            <li><a href="./about.html">about me</a></li>
+            <li><a href="./contact.html">contact</a></li>
+            <li><a href="./resume.html">resume</a></li>
+        </ul>
     </nav>
 
     <!-- <div class="inline-block Logo">
@@ -23,27 +24,31 @@
 </header>
 
 <div class="hero">
-       <div class="designer">I AM A UX/UI DESIGNER</div> 
-       <!-- <button type="button" text-color="white">see my work</button> -->
-       <img src="Images\logo.png" alt="logo pic" class="logo">
+    <div class="designer">I AM A UX/UI DESIGNER</div>
+    <!-- <button type="button" text-color="white">see my work</button> -->
+    <img src="Images\logo.png" alt="logo pic" class="logo">
 </div>
 
 <section class="heroImg">
     <div class="content">
         <!-- <img src="images\SeattlePic.jpg" alt="City pic"> -->
-        <p>As a passionate UX/UI designer who focuses on user centered design, I put the user's needs before anything else. My first exploration of empathy maps and user personas was an eye opener and it became even more vital to my process with analysing direct user feedback on how I could improve navigation and user satisfaction. I am here to turn user problems into elegant solutions.
+        <p>As a passionate UX/UI designer who focuses on user centered design, I put the user's needs before anything
+            else. My first exploration of empathy maps and user personas was an eye opener and it became even more vital
+            to my process with analysing direct user feedback on how I could improve navigation and user satisfaction. I
+            am here to turn user problems into elegant solutions.
         </p>
         <button type="button">Download Resume</button>
     </div>
 </section>
 <footer>
     <h1 style="font: normal normal bold 45px/112px Lulo Clean W01 One;">Let's Connect.</h1>
-    <ul class="inline-block"style="display: flex; justify-content: center;">
+    <ul class="inline-block" style="display: flex; justify-content: center;">
         <li>Behance</li>
         <li>LinkedIn</li>
         <li>Email</li>
         <li>Instagram</li>
-      </ul>
+    </ul>
 </footer>
 </body>
-</html> 
+
+</html>
